--- a/pages/templates/especialidades.html
+++ b/pages/templates/especialidades.html
@@ -119,7 +119,7 @@
                 <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                     <div class="feature bg-light bg-gradient text-white rounded-3 mb-4 mt-n4">
                         
-                        <a href="{% url 'ubsmangueira'%}">
+                        <a href="{% url 'vigilanciaemsaude'%}">
                             <img src="{% static '/img/images/iconeubs.png'%}" class="item--imageubs" alt="">
                         
                     </div>
