--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -90,6 +90,7 @@
                               <div class="carousel-item active">
                                   <div class="card border-0 rounded-0 text-light overflow zoom">
                                       <div class="position-relative">
+
                                           <!--thumbnail img-->
                                           <div class="ratio_left-cover-1 image-wrapper">
                                               <a href="https://www.instagram.com/p/ClZZgWeP_c_/?igshid=MDJmNzVkMjY%3D">
@@ -203,6 +204,58 @@
                                       </div>
                                   </div>
                               </div>
+                              <!--Item slider-->
+                              <div class="carousel-item">
+                                <div class="card border-0 rounded-0 text-light overflow zoom">
+                                    <div class="position-relative">
+                                        <!--thumbnail img-->
+                                        <div class="ratio_left-cover-1 image-wrapper">
+                                            <a target="_blank" href="">
+                                                <img class="img-fluid w-100"
+                                                src="{% static 'img/images/noticias/vaci.jpg'%}"
+                                                     alt="Bootstrap portal template">
+                                            </a>
+                                        </div>
+                                        <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
+                                            <!--title-->
+                                            <a target="_blank" href="">
+                                                <h2 class="h3 post-title text-white my-1">Já estão disponíveis a aplicação da vacina contra COVID-19 em bebês de 06 meses à 02 anos 11 meses e 29 dias com comorbidade</h2>
+                                            </a>
+                                            <!-- meta title -->
+                                            <div class="news-meta">
+                                              <span class="news-author"><a class="text-white font-weight-bold" href=""><a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.instagram.com/p/CmCrNmBPAvy/">Acessar</a>
+                                                  <span class="news-date">11/12/2022</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Item slider-->
+                            <div class="carousel-item">
+                                <div class="card border-0 rounded-0 text-light overflow zoom">
+                                    <div class="position-relative">
+                                        <!--thumbnail img-->
+                                        <div class="ratio_left-cover-1 image-wrapper">
+                                            <a target="_blank" href="">
+                                                <img class="img-fluid w-100"
+                                                src="{% static 'img/images/noticias/vaci.jpg'%}"
+                                                     alt="Bootstrap portal template">
+                                            </a>
+                                        </div>
+                                        <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
+                                            <!--title-->
+                                            <a target="_blank" href="">
+                                                <h2 class="h3 post-title text-white my-1">A E.E. M. Taciano Basílio, no Saco da Prata, recebeu as equipes do Programa Saúde na Escola.</h2>
+                                            </a>
+                                            <!-- meta title -->
+                                            <div class="news-meta">
+                                              <span class="news-author"><a class="text-white font-weight-bold" href=""><a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.instagram.com/p/Cl48RUSjz5X/">Acessar</a>
+                                                  <span class="news-date">07/12/2022</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                               <!--end item slider-->
                           </div>
                           <!--end carousel inner-->
