--- a/pages/templates/secretaria.html
+++ b/pages/templates/secretaria.html
@@ -123,8 +123,8 @@
                   <div class="col-lg-4 text-center">
                     <img class="rounded-circle bg-dark" src="{% static '/img/images/alvara.gif'%}" alt="Generic placeholder image" width="140" height="140">
                     <h2>Web Controle</h2>
-                    <p>Alvará Vigilância Sanitária</p>
-                    <p><a class="btn btn-info" href="http://192.168.10.91:8080/webControle/" role="button">Acessar »</a></p>
+                    <p>Vigilância Sanitária</p>
+                    <p><a class="btn btn-info" href="http://webcontrole/webControle/" role="button">Acessar »</a></p>
                   </div><!-- /.col-lg-4 -->
                 
                  
