--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -238,7 +238,7 @@
                                         <div class="ratio_left-cover-1 image-wrapper">
                                             <a target="_blank" href="">
                                                 <img class="img-fluid w-100"
-                                                src="{% static 'img/images/noticias/vaci.jpg'%}"
+                                                src="{% static 'img/images/noticias/2.png'%}"
                                                      alt="Bootstrap portal template">
                                             </a>
                                         </div>
