--- a/pages/templates/hmsfx.html
+++ b/pages/templates/hmsfx.html
@@ -88,8 +88,22 @@
                         <p><a class="btn btn-info" href="https://sisregiii.saude.gov.br/cgi-bin/index" role="button">Acessar »</a></p>
                       </div><!-- /.col-lg-4 -->
                      
-        
+                      <hr class="featurette-divider">
 
+                      <div class="col-lg-4 text-center">
+                        <img class="rounded-circle bg-dark" src="{% static '/img/images/escalaweb.gif'%}" alt="Generic placeholder image" width="140" height="140">
+                        <h2>Escala Web</h2>
+                        <p>Gestão de Escala</p>
+                        <p><a class="btn btn-info" href="https://192.168.10.91:8383/" role="button">Acessar »</a></p>
+                      </div><!-- /.col-lg-4 -->
+
+                      <div class="col-lg-4 text-center" >
+                        <img class="rounded-circle" src="{% static '/img/images/digital.gif'%}" alt="Generic placeholder image" width="140" height="140">
+                        <h2>Ponto Biométrico</h2>
+                        <p>Sistema de Gestão de Pontos</p>
+                        <p><a target="a_blank" class="btn btn-info" href="https://inovarepontodigital.com.br/login" role="button">Acessar »</a></p>
+                        <p><a  target="a_blank" class="btn btn-primary" href="https://inovarepontodigital.com.br/ponto?token=AAAAB3NzaC1yc2EAAAABJQAAACEApx8f1wVrlCU3hyB6Gr%2FkoKxwpT4vj%2F0jjv3onsq2vYc" role="button">Registro »</a></p>
+              </div>
 
       <!-- COMEÇAM AS MENCIONADAS FEATUREZINHAS xD -->
 
