--- a/pages/templates/vigilanciaemsaude.html
+++ b/pages/templates/vigilanciaemsaude.html
@@ -65,7 +65,7 @@
             <img class="rounded-circle bg-dark" src="{% static '/img/images/alvara.gif'%}" alt="Generic placeholder image" width="140" height="140">
             <h2>Web Controle</h2>
             <p>Vigilância Sanitária</p>
-            <p><a class="btn btn-info" href="http://webcontrole/webControle/" role="button">Acessar »</a></p>
+            <p><a class="btn btn-info" href="http://webcontrole/" role="button">Acessar »</a></p>
           </div><!-- /.col-lg-4 -->
         
   
