--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -307,18 +307,18 @@
                                   <div class="position-relative">
                                       <!--thumbnail img-->
                                       <div class="ratio_right-cover-2 image-wrapper">
-                                          <a href="https://www.itaguai.rj.gov.br/dia-d-da-campanha-nacional-de-multivacinacao-e-poliomielite-acontece-neste-sabado-20-08/">
+                                          <a href="">
                                               <img class="img-fluid"
-                                              src="{% static 'img/images/28.jpeg'%}"
+                                              src="{% static 'img/images/noticias/29.png'%}"
                                                    alt="bootstrap templates for blog">
                                           </a>
                                       </div>
                                       <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                           <!-- category -->
-                                          <a class="p-1 badge badge-primary rounded-0" href="https://www.itaguai.rj.gov.br/dia-d-da-campanha-nacional-de-multivacinacao-e-poliomielite-acontece-neste-sabado-20-08/">Dia D</a>
+                                          <a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.instagram.com/p/CmHKMoRjwwL/">Acessar</a>
                                           <!--title-->
-                                          <a href="https://www.itaguai.rj.gov.br/dia-d-da-campanha-nacional-de-multivacinacao-e-poliomielite-acontece-neste-sabado-20-08/">
-                                              <h2 class="h5 text-white my-1">Dia D da Campanha Nacional de Multivacinação e Poliomielite</h2>
+                                          <a href="">
+                                              <h2 class="h5 text-white my-1">Itaguaí amplia as ações em saúde.</h2>
                                           </a>
                                       </div>
                                   </div>
