--- a/pages/templates/hmsfx.html
+++ b/pages/templates/hmsfx.html
@@ -130,7 +130,7 @@
                         <img class="rounded-circle bg-dark" src="{% static '/img/images/escalaweb.gif'%}" alt="Generic placeholder image" width="140" height="140">
                         <h2>Escala Web</h2>
                         <p>Gestão de Escala</p>
-                        <p><a class="btn btn-info" href="http://192.168.10.91:8484" role="button">Acessar »</a></p>
+                        <p><a class="btn btn-info" href="http://192.168.10.91:8383/" role="button">Acessar »</a></p>
                       </div><!-- /.col-lg-4 -->
 
                       <div class="col-lg-4 text-center" >
