--- a/pages/templates/hmsfx.html
+++ b/pages/templates/hmsfx.html
@@ -19,11 +19,11 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">Avisos</h1>
+        <h1 class="modal-title fs-5 mb-5" id="exampleModalToggleLabel" >Avisos</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        {% comment %} <img src="{% static '/img/images/digital.gif' %}" alt=""> {% endcomment %}
+        <img src="{% static '/img/images/carrosselUnid/jane.png' %}" alt=""> 
         <img src="https://www.instagram.com/p/CmNnWpFj5Mn/" alt="">
         
       </div>
@@ -41,7 +41,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Hide this modal and show the first with the button below.
+        
       </div>
       <div class="modal-footer">
         <button class="btn btn-primary" data-bs-target="#exampleModalToggle" data-bs-toggle="modal">Back to first</button>
@@ -49,7 +49,7 @@
     </div>
   </div>
 </div>
-<a class="btn btn-primary align-content-center" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Avisos</a>
+<a class="btn btn-primary mb-5 p-lg-2 col-1" data-bs-toggle="modal" href="#exampleModalToggle" role="button">Avisos</a>
 
 <div class="card bg-gradient-primary-to-secondary mt-0 "  align="center" id='pad' >
     <h1>
