--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -143,7 +143,7 @@
                                                     <a class="text-white font-weight-bold" href="">
                                                     <a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.itaguai.rj.gov.br/itaguai-abre-laboratorio-com-capacidade-para-35-mil-exames-de-sangue-por-mes/">Acessar</a>
                                                   </a></span>
-                                                  <span class="news-date">20/09/2022</span>
+                                                  <span class="news-date">03/01/2023</span>
                                               </div>
                                           </div>
                                       </div>
@@ -357,16 +357,16 @@
                                       <div class="ratio_right-cover-2 image-wrapper">
                                           <a target="_blank" href="https://bootstrap.news/bootstrap-4-template-news-portal-magazine/">
                                               <img class="img-fluid"
-                                              src="{% static 'img/images/26.jpeg'%}"
+                                              src="{% static 'img/images/noticias/30.png'%}"
                                               alt="blog website templates bootstrap">
                                           </a>
                                       </div>
                                       <div class="position-absolute p-2 p-lg-3 b-0 w-100 bg-shadow">
                                           <!-- category -->
-                                          <a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.itaguai.rj.gov.br/prefeitura/">Saúde</a>
+                                          <a class="p-1 badge badge-primary rounded-0" target="_blank" href="https://www.instagram.com/p/Cm-Ie5MvGZN/">Saúde</a>
                                           <!--title-->
-                                          <a target="_blank" href="https://www.itaguai.rj.gov.br/prefeitura/">
-                                              <h2 class="h5 text-white my-1">Prefeitura amplia oferta de exames na rede pública de saúde</h2>
+                                          <a target="_blank" href="https://www.instagram.com/p/Cm-Ie5MvGZN/">
+                                              <h2 class="h5 text-white my-1">Caian é o primeiro itaguaiense nascido na maternidade do Hospital São Francisco Xavier em 2023</h2>
                                           </a>
                                       </div>
                                   </div>
