--- a/templates/pages/modelo.html
+++ b/templates/pages/modelo.html
@@ -153,7 +153,7 @@
               <div class="carousel-inner">
 
                 <div class="carousel-item active">
-                  <img src="{% static '/img/images/carrosselUnid/nove.jpg'%}" class="d-block w-100" height='400' alt="...">
+                  <img src="{% static '/img/images/carrosselUnid/jane.png'%}" class="d-block w-100" height='400' alt="...">
                 </div>
 
                 <div class="carousel-item">
